@@ -17,6 +17,19 @@
 
 foreach $f (@ARGV) {
     open(FILE, $f) || die("Cannot open $f");
+    read(FILE, $header, 2);
+    if ($header eq '#!') {
+      $path = <FILE>;
+      if ($path = '/bin/sh') {
+        # exec form of the shebang header
+        $path = <FILE>;
+        if ($path =~ s/^exec '(.*)' "\$0" "\$@\"$/$1/ > 0) {
+          $path =~ s/'\\''/'/g;
+        } else {
+          undef $path;
+        }
+      }
+    };
     seek(FILE, -16, 2);
     $num_sections = &read_int();
     read(FILE, $magic, 12);
@@ -31,14 +44,16 @@ foreach $f (@ARGV) {
         $length{$sec} = $seclength[$i];
     }
     print $f, ":\n" if ($#ARGV > 0);
-    $path =
-        $length{'RNTM'} > 0 ?
-            &read_section('RNTM') :
-            "(default runtime)\n";
+    if (not defined $path) {
+      $path =
+          $length{'RNTM'} > 0 ?
+              substr(&read_section('RNTM'), 0, -1) :
+              "(custom runtime)";
+    };
     printf ("\tcode: %-7d data: %-7d symbols: %-7d debug: %-7d\n",
             $length{'CODE'}, $length{'DATA'},
             $length{'SYMB'}, $length{'DBUG'});
-    printf ("\tmagic number: %s  runtime system: %s",
+    printf ("\tmagic number: %s  runtime system: %s\n",
             $magic, $path);
     close(FILE);
 }
