@@ -555,6 +555,11 @@ Working version
   types.
   (Chris Casinghino, review by Gabriel Scherer)
 
+- #11???: Always keep within the 128 character limit for shebang lines. Previous
+  fix in #8622 handled building the compiler with a long prefix; this patch
+  extends this to the bytecode executables emitted by that compiler.
+  (David Allsopp, review by ???)
+
 OCaml 5.0.0 (15 December 2022)
 ------------------------------
 
